crates/aquascope/tests/snapshots/interpreter__basic.test.snap
---
source: crates/aquascope/tests/interpreter.rs
description: basic.test
---
steps:
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 1
              column: 2
            end:
              line: 1
              column: 16
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: x
              value:
                type: Int
                value: 1
              moved_paths: []
    heap:
      locations: []
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 2
              column: 2
            end:
              line: 2
              column: 12
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: x
              value:
                type: Int
                value: 1
              moved_paths: []
            - name: y
              value:
                type: Int
                value: 1
              moved_paths: []
    heap:
      locations: []
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 3
              column: 2
            end:
              line: 3
              column: 9
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: x
              value:
                type: Int
                value: 2
              moved_paths: []
            - name: y
              value:
                type: Int
                value: 1
              moved_paths: []
    heap:
      locations: []
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 4
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          locals: []
    heap:
      locations: []
result:
  type: Success
