crates/aquascope/tests/snapshots/interpreter__book-example.test.snap
---
source: crates/aquascope/tests/interpreter.rs
description: book-example.test
---
steps:
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 1
              column: 4
            end:
              line: 1
              column: 24
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: n
              value:
                type: Adt
                value:
                  name: Box
                  variant: ~
                  fields:
                    - - "0"
                      - type: Adt
                        value:
                          name: Unique
                          variant: ~
                          fields:
                            - - pointer
                              - type: Adt
                                value:
                                  name: NonNull
                                  variant: ~
                                  fields:
                                    - - pointer
                                      - type: Pointer
                                        value:
                                          path:
                                            segment:
                                              type: Heap
                                              value:
                                                index: 0
                                            parts: []
                                          range: ~
                                  alloc_kind: ~
                          alloc_kind: ~
                  alloc_kind:
                    type: Box
              moved_paths: []
    heap:
      locations:
        - type: Int
          value: 1
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 2
              column: 4
            end:
              line: 2
              column: 25
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: n
              value:
                type: Adt
                value:
                  name: Box
                  variant: ~
                  fields:
                    - - "0"
                      - type: Adt
                        value:
                          name: Unique
                          variant: ~
                          fields:
                            - - pointer
                              - type: Adt
                                value:
                                  name: NonNull
                                  variant: ~
                                  fields:
                                    - - pointer
                                      - type: Pointer
                                        value:
                                          path:
                                            segment:
                                              type: Heap
                                              value:
                                                index: 0
                                            parts: []
                                          range: ~
                                  alloc_kind: ~
                          alloc_kind: ~
                  alloc_kind:
                    type: Box
              moved_paths: []
    heap:
      locations:
        - type: Int
          value: 1
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 2
              column: 4
            end:
              line: 2
              column: 25
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: n
              value:
                type: Adt
                value:
                  name: Box
                  variant: ~
                  fields:
                    - - "0"
                      - type: Adt
                        value:
                          name: Unique
                          variant: ~
                          fields:
                            - - pointer
                              - type: Adt
                                value:
                                  name: NonNull
                                  variant: ~
                                  fields:
                                    - - pointer
                                      - type: Pointer
                                        value:
                                          path:
                                            segment:
                                              type: Heap
                                              value:
                                                index: 0
                                            parts: []
                                          range: ~
                                  alloc_kind: ~
                          alloc_kind: ~
                  alloc_kind:
                    type: Box
              moved_paths: []
        - name: plus_one
          body_span:
            start:
              line: 5
              column: 0
            end:
              line: 7
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 5
              column: 0
            end:
              line: 5
              column: 27
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: x
              value:
                type: Pointer
                value:
                  path:
                    segment:
                      type: Heap
                      value:
                        index: 0
                    parts: []
                  range: ~
              moved_paths: []
    heap:
      locations:
        - type: Int
          value: 1
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 2
              column: 4
            end:
              line: 2
              column: 25
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: n
              value:
                type: Adt
                value:
                  name: Box
                  variant: ~
                  fields:
                    - - "0"
                      - type: Adt
                        value:
                          name: Unique
                          variant: ~
                          fields:
                            - - pointer
                              - type: Adt
                                value:
                                  name: NonNull
                                  variant: ~
                                  fields:
                                    - - pointer
                                      - type: Pointer
                                        value:
                                          path:
                                            segment:
                                              type: Heap
                                              value:
                                                index: 0
                                            parts: []
                                          range: ~
                                  alloc_kind: ~
                          alloc_kind: ~
                  alloc_kind:
                    type: Box
              moved_paths: []
        - name: plus_one
          body_span:
            start:
              line: 5
              column: 0
            end:
              line: 7
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 6
              column: 4
            end:
              line: 6
              column: 10
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: (return)
              value:
                type: Int
                value: 2
              moved_paths: []
            - name: x
              value:
                type: Pointer
                value:
                  path:
                    segment:
                      type: Heap
                      value:
                        index: 0
                    parts: []
                  range: ~
              moved_paths: []
    heap:
      locations:
        - type: Int
          value: 1
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 2
              column: 4
            end:
              line: 2
              column: 25
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: n
              value:
                type: Adt
                value:
                  name: Box
                  variant: ~
                  fields:
                    - - "0"
                      - type: Adt
                        value:
                          name: Unique
                          variant: ~
                          fields:
                            - - pointer
                              - type: Adt
                                value:
                                  name: NonNull
                                  variant: ~
                                  fields:
                                    - - pointer
                                      - type: Pointer
                                        value:
                                          path:
                                            segment:
                                              type: Heap
                                              value:
                                                index: 0
                                            parts: []
                                          range: ~
                                  alloc_kind: ~
                          alloc_kind: ~
                  alloc_kind:
                    type: Box
              moved_paths: []
            - name: y
              value:
                type: Int
                value: 2
              moved_paths: []
    heap:
      locations:
        - type: Int
          value: 1
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 3
              column: 4
            end:
              line: 3
              column: 38
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: n
              value:
                type: Adt
                value:
                  name: Box
                  variant: ~
                  fields:
                    - - "0"
                      - type: Adt
                        value:
                          name: Unique
                          variant: ~
                          fields:
                            - - pointer
                              - type: Adt
                                value:
                                  name: NonNull
                                  variant: ~
                                  fields:
                                    - - pointer
                                      - type: Pointer
                                        value:
                                          path:
                                            segment:
                                              type: Heap
                                              value:
                                                index: 0
                                            parts: []
                                          range: ~
                                  alloc_kind: ~
                          alloc_kind: ~
                  alloc_kind:
                    type: Box
              moved_paths: []
            - name: y
              value:
                type: Int
                value: 2
              moved_paths: []
    heap:
      locations:
        - type: Int
          value: 1
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 4
              column: 0
            end:
              line: 4
              column: 1
            filename:
              private_use_as_methods_instead: 0
          locals: []
    heap:
      locations: []
result:
  type: Success
