crates/aquascope/tests/snapshots/interpreter__box.test.snap
---
source: crates/aquascope/tests/interpreter.rs
description: box.test
---
- stack:
    frames:
      - name: main
        body_span:
          char_start: 0
          char_end: 64
          byte_start: 0
          byte_end: 64
          filename: dummy.rs
        location:
          char_start: 14
          char_end: 38
          byte_start: 14
          byte_end: 38
          filename: dummy.rs
        locals:
          - - x
            - type: Pointer
              value:
                segment:
                  type: Heap
                  value:
                    index: 0
                parts: []
  heap:
    locations:
      - type: Int
        value: 0
- stack:
    frames:
      - name: main
        body_span:
          char_start: 0
          char_end: 64
          byte_start: 0
          byte_end: 64
          filename: dummy.rs
        location:
          char_start: 41
          char_end: 49
          byte_start: 41
          byte_end: 49
          filename: dummy.rs
        locals:
          - - x
            - type: Pointer
              value:
                segment:
                  type: Heap
                  value:
                    index: 0
                parts: []
  heap:
    locations:
      - type: Int
        value: 1
- stack:
    frames:
      - name: main
        body_span:
          char_start: 0
          char_end: 64
          byte_start: 0
          byte_end: 64
          filename: dummy.rs
        location:
          char_start: 52
          char_end: 62
          byte_start: 52
          byte_end: 62
          filename: dummy.rs
        locals:
          - - x
            - type: Pointer
              value:
                segment:
                  type: Heap
                  value:
                    index: 0
                parts: []
          - - y
            - type: Pointer
              value:
                segment:
                  type: Heap
                  value:
                    index: 0
                parts: []
  heap:
    locations:
      - type: Int
        value: 1
- stack:
    frames:
      - name: main
        body_span:
          char_start: 0
          char_end: 64
          byte_start: 0
          byte_end: 64
          filename: dummy.rs
        location:
          char_start: 63
          char_end: 64
          byte_start: 63
          byte_end: 64
          filename: dummy.rs
        locals: []
  heap:
    locations: []

