crates/aquascope/tests/snapshots/interpreter__tuple.test.snap
---
source: crates/aquascope/tests/interpreter.rs
description: tuple.test
---
steps:
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 3
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 1
              column: 2
            end:
              line: 1
              column: 41
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: x
              value:
                type: Tuple
                value:
                  - type: Int
                    value: 0
                  - type: Adt
                    value:
                      name: String
                      variant: ~
                      fields:
                        - - vec
                          - type: Adt
                            value:
                              name: Vec
                              variant: ~
                              fields:
                                - - buf
                                  - type: Adt
                                    value:
                                      name: RawVec
                                      variant: ~
                                      fields:
                                        - - inner
                                          - type: Adt
                                            value:
                                              name: RawVecInner
                                              variant: ~
                                              fields:
                                                - - ptr
                                                  - type: Adt
                                                    value:
                                                      name: Unique
                                                      variant: ~
                                                      fields:
                                                        - - pointer
                                                          - type: Adt
                                                            value:
                                                              name: NonNull
                                                              variant: ~
                                                              fields:
                                                                - - pointer
                                                                  - type: Pointer
                                                                    value:
                                                                      path:
                                                                        segment:
                                                                          type: Heap
                                                                          value:
                                                                            index: 0
                                                                        parts:
                                                                          - type: Index
                                                                            value: 0
                                                                      range: ~
                                                              alloc_kind: ~
                                                      alloc_kind: ~
                                                - - cap
                                                  - type: Adt
                                                    value:
                                                      name: UsizeNoHighBit
                                                      variant: ~
                                                      fields:
                                                        - - "0"
                                                          - type: Uint
                                                            value: 5
                                                      alloc_kind: ~
                                              alloc_kind: ~
                                      alloc_kind: ~
                                - - len
                                  - type: Uint
                                    value: 5
                              alloc_kind: ~
                      alloc_kind:
                        type: String
                        value:
                          len: 5
              moved_paths: []
    heap:
      locations:
        - type: Array
          value:
            type: All
            value:
              - type: Char
                value: 72
              - type: Char
                value: 101
              - type: Char
                value: 108
              - type: Char
                value: 108
              - type: Char
                value: 111
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 3
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 2
              column: 2
            end:
              line: 2
              column: 11
            filename:
              private_use_as_methods_instead: 0
          locals:
            - name: x
              value:
                type: Tuple
                value:
                  - type: Int
                    value: 1
                  - type: Adt
                    value:
                      name: String
                      variant: ~
                      fields:
                        - - vec
                          - type: Adt
                            value:
                              name: Vec
                              variant: ~
                              fields:
                                - - buf
                                  - type: Adt
                                    value:
                                      name: RawVec
                                      variant: ~
                                      fields:
                                        - - inner
                                          - type: Adt
                                            value:
                                              name: RawVecInner
                                              variant: ~
                                              fields:
                                                - - ptr
                                                  - type: Adt
                                                    value:
                                                      name: Unique
                                                      variant: ~
                                                      fields:
                                                        - - pointer
                                                          - type: Adt
                                                            value:
                                                              name: NonNull
                                                              variant: ~
                                                              fields:
                                                                - - pointer
                                                                  - type: Pointer
                                                                    value:
                                                                      path:
                                                                        segment:
                                                                          type: Heap
                                                                          value:
                                                                            index: 0
                                                                        parts:
                                                                          - type: Index
                                                                            value: 0
                                                                      range: ~
                                                              alloc_kind: ~
                                                      alloc_kind: ~
                                                - - cap
                                                  - type: Adt
                                                    value:
                                                      name: UsizeNoHighBit
                                                      variant: ~
                                                      fields:
                                                        - - "0"
                                                          - type: Uint
                                                            value: 5
                                                      alloc_kind: ~
                                              alloc_kind: ~
                                      alloc_kind: ~
                                - - len
                                  - type: Uint
                                    value: 5
                              alloc_kind: ~
                      alloc_kind:
                        type: String
                        value:
                          len: 5
              moved_paths: []
    heap:
      locations:
        - type: Array
          value:
            type: All
            value:
              - type: Char
                value: 72
              - type: Char
                value: 101
              - type: Char
                value: 108
              - type: Char
                value: 108
              - type: Char
                value: 111
  - stack:
      frames:
        - name: main
          body_span:
            start:
              line: 0
              column: 0
            end:
              line: 3
              column: 1
            filename:
              private_use_as_methods_instead: 0
          location:
            start:
              line: 3
              column: 0
            end:
              line: 3
              column: 1
            filename:
              private_use_as_methods_instead: 0
          locals: []
    heap:
      locations: []
result:
  type: Success
